--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ numpy==1.26.3
 #openai==0.27.8
 openapi-schema-pydantic==1.2.4
 packaging==23.2
+pyboxen==1.3.0
 pydantic==2.5.3
 pydantic_core==2.14.6
 python-dotenv==1.0.0
