pinecone and celery and redis

--- a/.env_copy
+++ b/.env_copy
@@ -6,7 +6,8 @@ OPENAI_MODEL=gpt-4o
 SECRET_KEY=123
 SQLALCHEMY_DATABASE_URI=sqlite:///sqlite.db
 UPLOAD_URL=http://localhost:8050
-REDIS_URI=
+REDIS_URI=redis://default:<<your password>>@<<your redis Public endpoint>> # If you are running on redis.com. Else if locally, use your URI
+#REDIS_URI=redis://localhost:6379 # If you are running on localHost
 PINECONE_API_KEY=
 PINECONE_ENV_NAME=
 PINECONE_INDEX_NAME=
