--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ jsonpatch==1.33
 jsonpointer==2.4
 langchain==0.0.352
 langchain-community==0.0.10
+langchain-openai
 #langchain-core==0.1.8
 #langsmith==0.0.78
 marshmallow==3.20.1
