--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ jsonpointer==2.4
 langchain==0.0.352
 langchain-community==0.0.10
 langchain-openai
+langfuse
 #langchain-core==0.1.8
 #langsmith==0.0.78
 marshmallow==3.20.1
